vNEXT (in development)

  * (Internal) Enabled Travis, Codacy and Coveralls

v0.2.0

  * Added support for connecting over TLS
  * Simplified how event handlers are registered
  * Improved use of coroutines so users don't have to worry about them
  * (Internal) Upgraded to Gradle 5.1.1