@@ -3,7 +3,7 @@ package com.dmdirc.ktirc.events
 import com.dmdirc.ktirc.IrcClient
 import com.dmdirc.ktirc.model.UserState
 
-class UserStateHandler : EventHandler {
+internal class UserStateHandler : EventHandler {
 
     override fun processEvent(client: IrcClient, event: IrcEvent) {
         when (event) {
